# ChangeLog for x11-proto/bigreqsproto
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-proto/bigreqsproto/ChangeLog,v 1.28 2007/02/04 18:08:36 joshuabaergen Exp $

  04 Feb 2007; Joshua Baergen <joshuabaergen@gentoo.org>
  bigreqsproto-1.0.2.ebuild:
  Drop mirroring restriction.  Thanks to Zhang Le of bug #163088.

  19 Jul 2006; Guy Martin <gmsoft@gentoo.org> bigreqsproto-1.0.2.ebuild:
  Stable on hppa.

  10 Jul 2006; Aron Griffis <agriffis@gentoo.org> bigreqsproto-1.0.2.ebuild:
  Mark 1.0.2 stable on ia64

  30 Jun 2006; Donnie Berkholz <spyderous@gentoo.org>;
  bigreqsproto-1.0.2.ebuild:
  arm/sh stable

  30 Jun 2006; Donnie Berkholz <spyderous@gentoo.org>;
  bigreqsproto-1.0.2.ebuild:
  ppc/sparc/mips/alpha stable

  30 Jun 2006; Marien Zwart <marienz@gentoo.org>
  files/digest-bigreqsproto-1.0.2, Manifest:
  Fix digest.

  30 Jun 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  bigreqsproto-1.0.2.ebuild:
  Stable on amd64.

  30 Jun 2006; Markus Rothe <corsair@gentoo.org> bigreqsproto-1.0.2.ebuild:
  Stable on ppc64

  30 Jun 2006; Donnie Berkholz <spyderous@gentoo.org>;
  bigreqsproto-1.0.2.ebuild:
  x86 stable.

  28 Apr 2006; Marien Zwart <marienz@gentoo.org>
  files/digest-bigreqsproto-1.0.2, Manifest:
  Revert to working digest.

  28 Apr 2006; Alec Warner <antarus@gentoo.org>
  files/digest-bigreqsproto-1.0.2, Manifest:
  Fixing SHA256 digest, pass four

  28 Apr 2006; Marien Zwart <marienz@gentoo.org> Manifest:
  Fixing SHA256 digest, pass four

  31 Mar 2006; Diego Pettenò <flameeyes@gentoo.org>
  bigreqsproto-1.0.2.ebuild:
  Add ~x86-fbsd keyword.

  24 Mar 2006; Donnie Berkholz <spyderous@gentoo.org>;
  bigreqsproto-1.0.2.ebuild:
  (#127306) Digests changed between release candidates and final release for
  the same tarballs.

  09 Mar 2006; Aron Griffis <agriffis@gentoo.org> bigreqsproto-1.0.2.ebuild:
  Mark 1.0.2 ~ia64
