@@ -1,4 +1,4 @@
 DIST bigreqsproto-1.0.2.tar.bz2 36676 RMD160 153bc6e44f7e41743c7a9607173fc2c52301bda4 SHA1 8f6c112f607a137dce5d8958753c770ac3f06c14 SHA256 30da0098a24578e645193464526cc4d5c2c7fecaf476d1b9dabe68118850adee
-EBUILD bigreqsproto-1.0.2.ebuild 550 RMD160 9e20b0edb0a980d01ebd6622b193a845f02a3815 SHA1 153dda958c0550ea81bb3f094ab7ce0dfce70d5a SHA256 76130e748850b75b0a77221ac826e8696c3c72a85bc7656fb34c8407f16675ea
-MISC ChangeLog 3355 RMD160 2049b74235e47944842572dcc68e55f6d944bdd4 SHA1 da097295bc26f1d6edd78a5d5c425da8d9f633b0 SHA256 d3149baef4b08694573fac2f87544f76bc4e9bc5d016bf55f2e90483bccb2592
+EBUILD bigreqsproto-1.0.2.ebuild 549 RMD160 1fbeb184a8c0773d5ece3c1dc91d6fe7d1a837b4 SHA1 8522d406134504120381e882b8533a1994064cf8 SHA256 ab262242f3540c395d2d83a77d41a6bfc368c0e3d552ee96f1b4b1d6089b9fb6
+MISC ChangeLog 3455 RMD160 c7a3b679ed1be95e021964d9c0700da78c8d2e66 SHA1 c9c28878bb9cd085ba3beb554bd34c3c54e61aba SHA256 fa4a5f193478b3381b146ba33894a25cd75eda4d9dd6da7b0dcfad2e89549a01
 MISC metadata.xml 156 RMD160 c1274bdccf57603d580de0075ba07a35b7509560 SHA1 6f78f604e3d079d39189b40aaaa1ddb06182ad91 SHA256 5101ab0d4cc8c7125eea733c44e86962769bd77acaf53b69223b9cadcdd29055
