@@ -1,6 +1,6 @@
-# Copyright 1999-2007 Gentoo Foundation
+# Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/x11-proto/bigreqsproto/bigreqsproto-1.0.2.ebuild,v 1.16 2007/02/04 18:08:36 joshuabaergen Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-proto/bigreqsproto/bigreqsproto-1.0.2.ebuild,v 1.17 2009/05/05 14:59:08 fauli Exp $
 
 # Must be before x-modular eclass is inherited
 #SNAPSHOT="yes"
@@ -10,6 +10,6 @@ inherit x-modular
 DESCRIPTION="X.Org BigReqs protocol headers"
 
 KEYWORDS="~ppc-aix ~x64-freebsd ~x86-interix ~amd64-linux ~x86-linux ~ppc-macos ~x86-macos ~sparc-solaris ~sparc64-solaris ~x64-solaris ~x86-solaris"
-
+IUSE=""
 RDEPEND=""
 DEPEND="${RDEPEND}"
